Organize area pages into subfolders

--- a/404.html
+++ b/404.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8" />
   <title>Pagina non trovata – B&Brother’s</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 <body>
 <header class="site-header">
   <div class="container header-inner fade-in">
     <a href="index.html" class="logo">
-      <img src="logo-bbrothers.png" alt="Logo B&Brother’s" class="logo-img" />
+      <img src="assets/images/logo-bbrothers.png" alt="Logo B&Brother’s" class="logo-img" />
       <div class="logo-text">
         <span class="logo-title">B&Brother’s</span>
         <span class="logo-subtitle">Gestione affitti brevi a Roma</span>
@@ -18,14 +18,14 @@
     </a>
     <nav class="main-nav">
       <a href="index.html" class="nav-link">Home</a>
-        <a href="proprietari.html" class="nav-link">Per i proprietari</a>
-        <a href="ospiti.html" class="nav-link">Per gli ospiti</a>
-        <a href="alloggi.html" class="nav-link">Alloggi</a>
+        <a href="proprietari/index.html" class="nav-link">Per i proprietari</a>
+        <a href="ospiti/index.html" class="nav-link">Per gli ospiti</a>
+        <a href="ospiti/alloggi.html" class="nav-link">Alloggi</a>
         <a href="come-lavoriamo.html" class="nav-link">Come lavoriamo</a>
         <a href="chi-siamo.html" class="nav-link">Chi siamo</a>
         <a href="faq.html" class="nav-link">FAQ</a>
         <a href="contatti.html" class="nav-link">Contatti</a>
-        <a href="login.html" class="nav-link">Area proprietari</a>
+        <a href="proprietari/login.html" class="nav-link">Area proprietari</a>
         
     </nav>
     <a href="https://wa.me/393345071226" class="btn btn-whatsapp">WhatsApp</a>
