--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
   <meta charset="UTF-8" />
   <title>B&Brother’s – Gestione affitti brevi a Roma</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 <body>
 <header class="site-header">
   <div class="container header-inner fade-in">
     <a href="index.html" class="logo">
-      <img src="logo-bbrothers.png" alt="Logo B&Brother’s" class="logo-img" />
+      <img src="assets/images/logo-bbrothers.png" alt="Logo B&Brother’s" class="logo-img" />
       <div class="logo-text">
         <span class="logo-title">B&Brother’s</span>
         <span class="logo-subtitle">Gestione affitti brevi a Roma</span>
       </div>
     </a>
     <nav class="main-nav">
-      <a href="ospiti.html" class="nav-link">Area ospiti</a>
-      <a href="proprietari.html" class="nav-link">Area proprietari</a>
+      <a href="ospiti/index.html" class="nav-link">Area ospiti</a>
+      <a href="proprietari/index.html" class="nav-link">Area proprietari</a>
       <a href="contatti.html" class="nav-link">Contatti</a>
     </nav>
     <a href="https://wa.me/393345071226" class="btn btn-whatsapp">WhatsApp</a>
@@ -60,7 +60,7 @@
           <span>Self check-in</span>
           <span>Assistenza 7/7</span>
         </div>
-        <a href="ospiti.html" class="btn btn-primary btn-full">Vai all’area ospiti</a>
+        <a href="ospiti/index.html" class="btn btn-primary btn-full">Vai all’area ospiti</a>
       </article>
 
       <article class="listing-card role-card lift-on-hover fade-in delay-2">
@@ -74,7 +74,7 @@
           <span>Prezzi dinamici</span>
           <span>Report chiari</span>
         </div>
-        <a href="proprietari.html" class="btn btn-outline btn-full">Vai all’area proprietari</a>
+        <a href="proprietari/index.html" class="btn btn-outline btn-full">Vai all’area proprietari</a>
       </article>
     </div>
   </section>
@@ -87,8 +87,9 @@
       <p>WhatsApp: +39 334 507 1226 · Email: a.paolino0104@gmail.com</p>
     </div>
     <div class="footer-links">
-      <a href="#">Privacy</a>
-      <a href="#">Cookie</a>
+      <a href="chi-siamo.html">Chi siamo</a>
+      <a href="come-lavoriamo.html">Come lavoriamo</a>
+      <a href="faq.html">FAQ</a>
       <a href="contatti.html">Contatti</a>
     </div>
   </div>
