--- a/proprietari/index.html
+++ b/proprietari/index.html
@@ -4,27 +4,27 @@
   <meta charset="UTF-8" />
   <title>Area proprietari – B&Brother’s</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="../assets/css/style.css" />
 </head>
 <body>
 <header class="site-header">
   <div class="container header-inner fade-in">
-    <a href="proprietari.html" class="logo">
-      <img src="logo-bbrothers.png" alt="Logo B&Brother’s" class="logo-img" />
+    <a href="index.html" class="logo">
+      <img src="../assets/images/logo-bbrothers.png" alt="Logo B&Brother’s" class="logo-img" />
       <div class="logo-text">
         <span class="logo-title">B&Brother’s</span>
         <span class="logo-subtitle">Gestione affitti brevi a Roma</span>
       </div>
     </a>
     <nav class="main-nav">
-      <a href="proprietari.html" class="nav-link nav-link-active">Home proprietari</a>
+      <a href="index.html" class="nav-link nav-link-active">Home proprietari</a>
       <a href="#come-funziona" class="nav-link">Come funziona</a>
       <a href="#servizi-proprietari" class="nav-link">Servizi</a>
       <a href="#commissione" class="nav-link">Commissione</a>
-      <a href="contatti.html" class="nav-link">Contatti</a>
+      <a href="../contatti.html" class="nav-link">Contatti</a>
       <a href="login.html" class="nav-link">🔑 Area proprietari</a>
     </nav>
-    <a href="ospiti.html" class="nav-link nav-link-ghost">Vuoi prenotare un soggiorno?</a>
+    <a href="../ospiti/index.html" class="nav-link nav-link-ghost">Vuoi prenotare un soggiorno?</a>
   </div>
 </header>
 
@@ -38,7 +38,7 @@
           Dalla valutazione del potenziale alla gestione operativa quotidiana: siamo il tuo referente unico a Roma per gli affitti brevi.
         </p>
         <div class="hero-cta">
-          <a href="contatti.html" class="btn btn-primary">Richiedi una valutazione gratuita</a>
+          <a href="../contatti.html" class="btn btn-primary">Richiedi una valutazione gratuita</a>
           <a href="#come-funziona" class="btn btn-ghost">Scopri come funziona</a>
         </div>
         <div class="hero-cta" style="margin-top: 12px;">
@@ -58,7 +58,7 @@
           <li>Comunicazione ospiti e check-in gestiti per te</li>
           <li>Report mensili chiari e trasparenti</li>
         </ul>
-        <a href="contatti.html" class="hero-card-cta">Parla direttamente con Alessio →</a>
+        <a href="../contatti.html" class="hero-card-cta">Parla direttamente con Alessio →</a>
       </div>
     </div>
   </section>
