--- a/proprietari/login.html
+++ b/proprietari/login.html
@@ -4,27 +4,27 @@
   <meta charset="UTF-8" />
   <title>Login proprietari – B&Brother’s</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="../assets/css/style.css" />
 </head>
 <body>
 <header class="site-header">
   <div class="container header-inner fade-in">
-    <a href="proprietari.html" class="logo">
-      <img src="logo-bbrothers.png" alt="Logo B&Brother’s" class="logo-img" />
+    <a href="index.html" class="logo">
+      <img src="../assets/images/logo-bbrothers.png" alt="Logo B&Brother’s" class="logo-img" />
       <div class="logo-text">
         <span class="logo-title">B&Brother’s</span>
         <span class="logo-subtitle">Gestione affitti brevi a Roma</span>
       </div>
     </a>
     <nav class="main-nav">
-      <a href="proprietari.html" class="nav-link">Home proprietari</a>
-      <a href="proprietari.html#come-funziona" class="nav-link">Come funziona</a>
-      <a href="proprietari.html#servizi-proprietari" class="nav-link">Servizi</a>
-      <a href="proprietari.html#commissione" class="nav-link">Commissione</a>
-      <a href="contatti.html" class="nav-link">Contatti</a>
+      <a href="index.html" class="nav-link">Home proprietari</a>
+      <a href="index.html#come-funziona" class="nav-link">Come funziona</a>
+      <a href="index.html#servizi-proprietari" class="nav-link">Servizi</a>
+      <a href="index.html#commissione" class="nav-link">Commissione</a>
+      <a href="../contatti.html" class="nav-link">Contatti</a>
       <a href="login.html" class="nav-link nav-link-active">🔑 Area proprietari</a>
     </nav>
-    <a href="ospiti.html" class="nav-link nav-link-ghost">Vuoi prenotare un soggiorno?</a>
+    <a href="../ospiti/index.html" class="nav-link nav-link-ghost">Vuoi prenotare un soggiorno?</a>
   </div>
 </header>
 
