--- a/ospiti/property.html
+++ b/ospiti/property.html
@@ -4,26 +4,26 @@
   <meta charset="UTF-8" />
   <title>Alloggio – B&Brother’s</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="../assets/css/style.css" />
 </head>
 <body>
 <header class="site-header">
   <div class="container header-inner fade-in">
-    <a href="ospiti.html" class="logo">
-      <img src="logo-bbrothers.png" alt="Logo B&Brother’s" class="logo-img" />
+    <a href="index.html" class="logo">
+      <img src="../assets/images/logo-bbrothers.png" alt="Logo B&Brother’s" class="logo-img" />
       <div class="logo-text">
         <span class="logo-title">B&Brother’s</span>
         <span class="logo-subtitle">Gestione affitti brevi a Roma</span>
       </div>
     </a>
     <nav class="main-nav">
-      <a href="ospiti.html" class="nav-link">Home ospiti</a>
+      <a href="index.html" class="nav-link">Home ospiti</a>
       <a href="alloggi.html" class="nav-link nav-link-active">Tutti gli alloggi</a>
       <a href="servizi-extra.html" class="nav-link">Servizi extra</a>
-      <a href="ospiti.html#come-funziona-ospiti" class="nav-link">Come funziona</a>
-      <a href="contatti.html" class="nav-link">Contatti</a>
+      <a href="index.html#come-funziona-ospiti" class="nav-link">Come funziona</a>
+      <a href="../contatti.html" class="nav-link">Contatti</a>
     </nav>
-    <a href="proprietari.html" class="nav-link nav-link-ghost">Sei un proprietario?</a>
+    <a href="../proprietari/index.html" class="nav-link nav-link-ghost">Sei un proprietario?</a>
   </div>
 </header>
 
