Create React SPA with Express backend

--- a/index.html
+++ b/index.html
@@ -1,97 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="it">
-<head>
-  <meta charset="UTF-8" />
-  <title>B&Brother’s – Gestione affitti brevi a Roma</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="assets/css/style.css" />
-</head>
-<body>
-<header class="site-header">
-  <div class="container header-inner fade-in">
-    <a href="index.html" class="logo">
-      <img src="assets/images/logo-bbrothers.png" alt="Logo B&Brother’s" class="logo-img" />
-      <div class="logo-text">
-        <span class="logo-title">B&Brother’s</span>
-        <span class="logo-subtitle">Gestione affitti brevi a Roma</span>
-      </div>
-    </a>
-    <nav class="main-nav">
-      <a href="ospiti.html" class="nav-link">Area ospiti</a>
-      <a href="proprietari.html" class="nav-link">Area proprietari</a>
-      <a href="contatti.html" class="nav-link">Contatti</a>
-    </nav>
-    <a href="https://wa.me/393345071226" class="btn btn-whatsapp">WhatsApp</a>
-  </div>
-</header>
-
-<main>
-  <section class="hero">
-    <div class="container hero-inner">
-      <div class="hero-text fade-in delay-1">
-        <p class="eyebrow">Affitti brevi · Roma</p>
-        <h1>Gestione completa per affitti brevi a Roma.</h1>
-        <p class="hero-subtitle">
-          Scegli come vuoi vivere l’esperienza B&Brother’s: prenota un soggiorno da ospite o affida a noi la gestione del tuo immobile.
-        </p>
-      </div>
-      <div class="hero-card fade-in delay-2 tilt-on-hover">
-        <h2>Di cosa hai bisogno?</h2>
-        <p>Seleziona l’area più adatta: trovi contenuti dedicati a chi viaggia e a chi desidera delegare la gestione degli affitti.</p>
-        <div class="hero-badges">
-          <span>Risposte rapide</span>
-          <span>Team locale</span>
-          <span>Assistenza dedicata</span>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section class="section section-light">
-    <div class="container cards-grid">
-      <article class="listing-card role-card lift-on-hover fade-in delay-1">
-        <div class="listing-badge-row">
-          <span class="badge">Viaggiatori</span>
-        </div>
-        <h2>sono un ospite</h2>
-        <p>Voglio cercare un alloggio, vedere foto, servizi e disponibilità per il mio soggiorno a Roma.</p>
-        <div class="tags">
-          <span>Appartamenti curati</span>
-          <span>Self check-in</span>
-          <span>Assistenza 7/7</span>
-        </div>
-        <a href="ospiti.html" class="btn btn-primary btn-full">Vai all’area ospiti</a>
-      </article>
-
-      <article class="listing-card role-card lift-on-hover fade-in delay-2">
-        <div class="listing-badge-row">
-          <span class="badge badge-strong">Proprietari</span>
-        </div>
-        <h2>sono un proprietario</h2>
-        <p>Voglio scoprire come far gestire il mio immobile, pubblicare annunci e guadagnare senza pensieri.</p>
-        <div class="tags">
-          <span>Gestione completa</span>
-          <span>Prezzi dinamici</span>
-          <span>Report chiari</span>
-        </div>
-        <a href="proprietari.html" class="btn btn-outline btn-full">Vai all’area proprietari</a>
-      </article>
-    </div>
-  </section>
-</main>
-
-<footer class="site-footer">
-  <div class="container footer-inner">
-    <div>
-      <p>© 2025 B&Brother’s – Gestione Affitti Brevi a Roma. Tutti i diritti riservati.</p>
-      <p>WhatsApp: +39 334 507 1226 · Email: a.paolino0104@gmail.com</p>
-    </div>
-    <div class="footer-links">
-      <a href="#">Privacy</a>
-      <a href="#">Cookie</a>
-      <a href="contatti.html">Contatti</a>
-    </div>
-  </div>
-</footer>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>BBrothersrome</title>
+    <link rel="icon" type="image/png" href="/src/assets/images/logo-bbrothers.png" />
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
