Highlight servizi extra CTA for guests

--- a/ospiti.html
+++ b/ospiti.html
@@ -47,7 +47,7 @@
         </p>
         <div class="hero-cta">
           <a href="alloggi.html" class="btn btn-primary">Guarda tutti gli alloggi</a>
-          <a href="#servizi-ospiti" class="btn btn-ghost">Servizi inclusi</a>
+          <a href="servizi-extra.html" class="btn btn-accent">Scopri i servizi extra</a>
         </div>
       </div>
       <div class="hero-card fade-in delay-2 tilt-on-hover">
