--- a/area-proprietari-modifica.html
+++ b/area-proprietari-modifica.html
@@ -155,7 +155,7 @@
   let currentUser = null;
   let currentProperty = null;
 
-  function renderOwnerGallery(photos) {
+  function renderOwnerGallery(photos, property) {
     const gallery = document.getElementById("edit-photos");
     if (!photos || photos.length === 0) {
       gallery.innerHTML = "<p class=\"small-label\">Nessuna foto caricata. Aggiungine di nuove qui sotto.</p>";
@@ -175,8 +175,18 @@
               <div class="gallery-thumb ${p.isCover ? "thumb-active" : ""}" data-full="${p.url}">
                 <img src="${p.url}" alt="${p.label}" loading="lazy" />
                 <div class="thumb-actions">
-                  <span class="small-label">${p.isCover ? "Copertina" : ""}</span>
-                  ${p.id !== "cover" ? `<button class=\"btn btn-outline btn-small\" data-photo-id=\"${p.id}\" data-photo-path=\"${p.path}\">Elimina</button>` : ""}
+                  ${
+                    p.isCover
+                      ? '<span class="small-label">Copertina</span>'
+                      : p.id === "cover"
+                        ? ""
+                        : `<button class=\"btn btn-outline btn-small\" data-set-cover=\"${p.id}\" data-cover-url=\"${p.url}\">Imposta copertina</button>`
+                  }
+                  ${
+                    p.id !== "cover"
+                      ? `<button class=\"btn btn-outline btn-small\" data-photo-id=\"${p.id}\" data-photo-path=\"${p.path}\">Elimina</button>`
+                      : ""
+                  }
                 </div>
               </div>
             `
@@ -192,6 +202,13 @@
         main.src = thumb.dataset.full;
         thumbs.forEach((t) => t.classList.remove("thumb-active"));
         thumb.classList.add("thumb-active");
+      });
+    });
+
+    gallery.querySelectorAll("[data-set-cover]").forEach((btn) => {
+      btn.addEventListener("click", (e) => {
+        e.stopPropagation();
+        setCoverPhoto(btn.dataset.setCover, btn.dataset.coverUrl, property);
       });
     });
 
@@ -248,6 +265,37 @@
     }
 
     renderOwnerGallery(photos, property);
+  }
+
+  async function setCoverPhoto(photoId, photoUrl, property) {
+    if (!photoId || !property) return;
+    const msg = document.getElementById("edit-message");
+    msg.textContent = "Aggiornamento della copertina...";
+
+    const { error: resetError } = await supabase
+      .from("property_photos")
+      .update({ is_cover: false })
+      .eq("property_id", property.id);
+
+    if (resetError) {
+      msg.textContent = "Errore durante l'aggiornamento della copertina: " + resetError.message;
+      return;
+    }
+
+    const { error: coverError } = await supabase
+      .from("property_photos")
+      .update({ is_cover: true })
+      .eq("id", photoId);
+
+    if (coverError) {
+      msg.textContent = "Errore durante il salvataggio della copertina: " + coverError.message;
+      return;
+    }
+
+    await supabase.from("properties").update({ cover_photo_url: photoUrl }).eq("id", property.id);
+    property.cover_photo_url = photoUrl;
+    msg.textContent = "Copertina aggiornata.";
+    loadExistingPhotos(property);
   }
 
   async function deletePhoto(photoId, photoPath) {
